--- a/Feature_engineering_and_selection.ipynb
+++ b/Feature_engineering_and_selection.ipynb
@@ -198,19 +198,28 @@
    "source": [
     "The cleaned data contains the following columns:\n",
     "    \n",
-    "   **Formula**  contains a Simplified Molecular Input Line Entry System,” which is used to translate a\\\n",
-    "   chemical's three-    dimensional structure into a string of symbols;\\\n",
-    "   **name** is the IUPAC name of the compound;\\\n",
-    "   **Molecular wight** contains molecular weight of a molecule;\\\n",
-    "   **Tmp, C** is the temperature of the melting point of a substance;\\\n",
-    "   **logP** is the value of octanol–water partition coefficient;\\\n",
-    "   **f(ui)** - fraction un-ionized;\\\n",
-    "   **pK1** is the negative log_10 of corresponding constants of dissociation;\\\n",
-    "   **alpha** -molecular polarizability (the tendency of a molecule to aquire electric dipole moment when subjected to an electric field;\\\n",
+    "   **Formula**  contains a Simplified Molecular Input Line Entry System,” which is used to translate a\n",
+    "   chemical's three-    dimensional structure into a string of symbols;\n",
+    "   \n",
+    "   **name** is the IUPAC name of the compound;\n",
+    "   \n",
+    "   **Molecular wight** contains molecular weight of a molecule;\n",
+    "   \n",
+    "   **Tmp, C** is the temperature of the melting point of a substance;\n",
+    "   \n",
+    "   **logP** is the value of octanol–water partition coefficient;\n",
+    "   \n",
+    "   **f(ui)** - fraction un-ionized;\n",
+    "   \n",
+    "   **pK1** is the negative log_10 of corresponding constants of dissociation;\n",
+    "   \n",
+    "   **alpha** -molecular polarizability (the tendency of a molecule to aquire electric dipole moment when subjected to an electric field;\n",
+    "   \n",
     "   **soluble** is the target variable wich equals 1 for soluble molecules and 0 for unsoluble molecules. This parameter was\n",
     "   generated using the criterion of solubility according to which log(molar solubility) is greater than -5 for molecules\n",
-    "   soluble in water;\\\n",
-    "   **pK1_NA** is the parameter that we generated which is equals 1 for molecules that originally had NA in dissociacion   constant value, and it equals 0 when the molecule had a dissociation contant value"
+    "   soluble in water;\n",
+    "   \n",
+    "   **pK1_NA** is the parameter that we generated which is equals 1 for molecules that originally had NA in dissociacion   constant value, and it equals 0 when the molecule had a dissociation contant value."
    ]
   },
   {
